--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.0.4",
     "react-refresh": "^0.11.0",
     "react-router": "^6.20.1",
@@ -120,6 +121,10 @@
     "react-virtuoso": "^4.12.0",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "resize-observer-polyfill": "^1.5.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
@@ -134,6 +139,7 @@
     "tailwindcss": "^3.0.2",
     "thread-loader": "^4.0.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "unified": "^11.0.5",
     "web-vitals": "^2.1.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
