--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
     "css-loader": "^6.5.1",
+    "devlop": "^1.1.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
@@ -98,8 +99,11 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "jszip": "^3.10.1",
+    "katex": "^0.16.22",
     "lib-flexible": "^0.3.2",
     "lodash-es": "^4.17.21",
+    "micromark-util-character": "^2.1.1",
+    "micromark-util-symbol": "^2.0.1",
     "mini-css-extract-plugin": "^2.4.5",
     "pako": "^2.1.0",
     "pdfjs-dist": "^4.5.136",
@@ -121,8 +125,10 @@
     "react-virtuoso": "^4.12.0",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
+    "rehype-katex": "^7.0.1",
     "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "resize-observer-polyfill": "^1.5.1",
