--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,61 @@
-/node_modules
-/cache
+# 依赖
+node_modules/
+/pnpm-lock.yaml
+/yarn.lock
+/package-lock.json
+
+# 构建产物
 /dist
+/build
+/out
+/es
+/lib
+/tmp
+
+# 日志文件
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm/
+
+# 编辑器和IDE配置
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+.DS_Store # macOS
+Thumbs.db # Windows
+
+# 操作系统临时文件
+*.swp
+*.swo
+
+# 环境变量文件
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
+
+# 测试报告
+/coverage
+
+# Storybook (如果使用)
+.storybook/out/
+
+# Vercel / Netlify (部署相关)
+.vercel/
+.netlify/
+
+# Prettier / ESLint 缓存
+.prettierrc.json.bak
+.eslintcache
+
+# 其他临时文件或无关文件
+*.tgz
+*.zip
+*.rar
+*.7z
+.cache/
